final navigation work but data are not passing

--- a/package.json
+++ b/package.json
@@ -4,17 +4,26 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
+    "cache": "react-native start --reset-cache",
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
     "tsc": "tsc",
     "lint": "tslint --project tsconfig.json",
     "lint:fix": "tslint --project tsconfig.json --fix",
-    "tslint-check": "tslint-config-prettier-check ./tslint.json"
+    "tslint-check": "tslint-config-prettier-check ./tslint.json",
+    "android:clean": "cd android &&./gradlew clean"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.6",
     "react": "16.9.0",
-    "react-native": "0.61.5"
+    "react-native": "0.61.5",
+    "react-native-gesture-handler": "^1.5.6",
+    "react-native-safe-area-context": "^0.7.0",
+    "react-native-safe-area-view": "^1.0.0",
+    "react-native-screens": "^2.0.0-beta.2",
+    "react-navigation": "^4.1.1",
+    "react-navigation-stack": "^2.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
