--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-safe-area-view": "^1.0.0",
     "react-native-screens": "^2.0.0-beta.2",
     "react-navigation": "^4.1.1",
-    "react-navigation-stack": "^2.1.1"
+    "react-navigation-stack": "^2.1.1",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
