--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.6",
+    "@types/react-redux": "^7.1.7",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.5.6",
@@ -24,6 +25,7 @@
     "react-native-screens": "^2.0.0-beta.2",
     "react-navigation": "^4.1.1",
     "react-navigation-stack": "^2.1.1",
+    "react-redux": "^7.2.0",
     "redux": "^4.0.5"
   },
   "devDependencies": {
