--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.6",
     "@types/react-redux": "^7.1.7",
+    "@types/redux-logger": "^3.0.7",
+    "axios": "^0.19.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.5.6",
@@ -26,7 +28,8 @@
     "react-navigation": "^4.1.1",
     "react-navigation-stack": "^2.1.1",
     "react-redux": "^7.2.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
