--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MyAppNew",
+  "name": "connect",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -16,22 +16,25 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.6",
+    "@types/react-native-vector-icons": "^6.4.5",
     "@types/react-redux": "^7.1.7",
     "@types/redux-logger": "^3.0.7",
     "axios": "^0.19.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.5.6",
+    "react-native-paper": "^3.6.0",
     "react-native-safe-area-context": "^0.7.0",
     "react-native-safe-area-view": "^1.0.0",
     "react-native-screens": "^2.0.0-beta.2",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.1.1",
+    "react-navigation-material-bottom-tabs": "^2.2.2",
     "react-navigation-stack": "^2.1.1",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
-    "redux-saga": "^1.1.3",
-    "redux-thunk": "^2.3.0"
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
