--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -179,6 +179,9 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-audio-streaming')
+    implementation project(':react-native-streaming-audio-player')
+    implementation project(':react-native-sound')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
