--- a/ios/Podfile
+++ b/ios/Podfile
@@ -34,6 +34,10 @@ target 'MyAppNew' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+  pod 'RNSound', :path => '../node_modules/react-native-sound'
+
+  pod 'RNAudioStreaming', :path => '../node_modules/react-native-audio-streaming'
+
   target 'MyAppNewTests' do
     inherit! :search_paths
     # Pods for testing
