--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-safe-area-context": "^0.7.0",
     "react-native-safe-area-view": "^1.0.0",
     "react-native-screens": "^2.0.0-beta.2",
+    "react-native-sound": "^0.11.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.1.1",
     "react-navigation-material-bottom-tabs": "^2.2.2",
